# pluginmgr

./: .gitignore  .landscape.yml  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.md  CHANGELOG.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: tests.yml
Ctl/: config.yml
facsimile/: requirements-test.txt  requirements.txt
pluginmgr/: __init__.py  config.py
src/pluginmgr/: __init__.py  config.py
tests/: test_config_plugin.py  test_import.py  test_import_external.py  test_import_loader.py  test_plugin.py  test_searchpath.py  test_varargs.py
tests/data/dynload/: mod0.py
tests/pluginmgr_test/: __init__.py
tests/pluginmgr_test/plugins/: static0.py
