[tool.poetry]
name = "pluginmgr"
version = "1.1.0"
description = "lightweight python plugin system supporting config inheritance"
readme = "README.md"
repository = "https://github.com/20c/pluginmgr"
authors = ["20C <code@20c.com>"]
license = "Apache-2.0"
classifiers = [
    "Topic :: Software Development",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]


[tool.poetry.dependencies]
python = "^3.7"
munge = "^1.0.0"


[tool.poetry.dev-dependencies]
# testing
codecov = "^2.1.10"
coverage = "^5.3"
pytest = "^6.0.1"
pytest-cov = "*"
pytest-xdist = "^2.1.0"
tox = "^3"

# linting
black = { version = ">=20", allow-prereleases = true }
isort = ">=5.7.0"
flake8 = "^3.8.4"
pre-commit = "^2.13"
pyupgrade = "^2.19.4"

# docs
markdown = "*"
markdown-include = ">=0.5,<1"
mkdocs = "^1"

# ctl
ctl = "^1"
jinja2 = "^2.11.2"
tmpl = "^1"
twine = "^3.3.0"


[tool.pytest.ini_options]
norecursedirs = ["data", "gen", ".tox"]
minversion = "6.0"
addopts = "--boxed"
testpaths = [
    "tests",
]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
