[tool.poetry]
name = "pluginmgr"
version = "1.1.0.1"
description = "lightweight python plugin system supporting config inheritance"
readme = "README.md"
repository = "https://github.com/20c/pluginmgr"
authors = ["20C <code@20c.com>"]
license = "Apache-2.0"
classifiers = [
    "Topic :: Software Development",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]


[tool.poetry.dependencies]
python = "^3.7"
munge = ">=1"


[tool.poetry.dev-dependencies]
# testing
coverage = ">=5.3"
pytest = ">=6.1.2"
pytest-cov = ">=2.10.1"
pytest-forked = ">=1"
tox = ">=3.20.1"

# linting
ruff = ">=0.1"
pre-commit = ">=2.13"
pyupgrade = ">=2.19"

# ctl
ctl = ">=1"
jinja2 = ">=3"
tmpl = ">=1"
twine = ">=3.3.0"

# docs
markdown = "*"
markdown-include = ">=0.5,<1"
mkdocs = ">=1"

[tool.pytest.ini_options]
norecursedirs = ["data", "gen", ".tox"]
minversion = "6.0"
addopts = "--forked"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1"]
build-backend = "poetry.core.masonry.api"
